the 'en.json' file with all newly added translation options

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,19 +1,34 @@
 {
+    "A bar is on your name": "A bar is on your name",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A word of explanation": "A word of explanation",
     "ADMIN": "ADMIN",
+    "Actions": "Actions",
+    "Add a comment": "Add a comment",
     "Add a player to the team": "Add a player to the team",
+    "Add one game": "Add one game",
+    "Administration": "Administration",
+    "All Seasons": "All Seasons",
     "All rights reserved.": "All rights reserved.",
     "Already registered?": "Already registered?",
+    "Are you sure to delete this room? This can not be undone. All messages are deleted as well": "Are you sure to delete this room? This can not be undone. All messages are deleted as well",
+    "Are you sure to delete your message": "Are you sure to delete your message",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
+    "Are you sure you want to delete your comment": "Are you sure you want to delete your comment",
     "Are you sure you want to remove this player from the team?": "Are you sure you want to remove this player from the team?",
     "Available in": "Available in",
+    "Before deleting your account, please download any data or information that you wish to retain.": "Before deleting your account, please download any data or information that you wish to retain.",
+    "Calendar": "Calendar",
     "Calendar Creation": "Calendar Creation",
     "Cancel": "Cancel",
+    "Captain": "Captain",
     "Change a playing date": "Change a playing date",
     "Change the captain status of": "Change the captain status of",
     "Changelog": "Changelog",
+    "Character left": "Character left",
+    "Chat": "Chat",
+    "Chat rooms": "Chat rooms",
     "Choose a day games format": "Choose a day games format",
     "Claim your account": "Claim your account",
     "Click here to re-send the verification email.": "Click here to re-send the verification email.",
@@ -21,72 +36,136 @@
     "Confirm Password": "Confirm Password",
     "Confirm the final score": "Confirm the final score",
     "Confirmed": "Confirmed",
+    "Contact": "Contact",
+    "Contact Number": "Contact Number",
     "Create": "Create",
     "Create Day Sheet": "Create Day Sheet",
+    "Create a chat room": "Create a chat room",
     "Create a new Season": "Create a new Season",
     "Create a new Venue": "Create a new Venue",
+    "Create post": "Create post",
+    "Create the new Room": "Create the new Room",
     "Current Password": "Current Password",
+    "Current Team": "Current Team",
+    "Daily games lost": "Daily games lost",
+    "Daily games won": "Daily games won",
     "Dashboard": "Dashboard",
+    "Date": "Date",
     "Day Schedule blueprint": "Day Schedule blueprint",
     "Day Schedules": "Day Schedules",
     "Day Scores and Game details": "Day Scores and Game details",
     "Day scores": "Day scores",
+    "Delete": "Delete",
     "Delete Account": "Delete Account",
+    "Deleted": "Deleted",
     "Detailed schedules": "Detailed schedules",
+    "Edit": "Edit",
+    "Edit the team players": "Edit the team players",
+    "Edit the venue's details": "Edit the venue's details",
+    "Edit this venue": "Edit this venue",
     "Email": "Email",
     "Email the password reset link": "Email the password reset link",
     "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.": "Ensure your account is using a secure password. The current password is 'secret' and should be filled in.",
     "Final Score": "Final Score",
     "Final score is": "Final score is",
+    "Finals? Semi? Other?": "Finals? Semi? Other?",
     "Forbidden": "Forbidden",
     "Forgot your password?": "Forgot your password?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to create a new password.",
+    "Forum": "Forum",
+    "Forum posts that changed since your last login": "Forum posts that changed since your last login",
+    "Game": "Game",
     "General overview": "General overview",
+    "Has been opened": "Has been opened",
+    "Hide comment": "Hide comment",
     "Home": "Home",
     "Home Team": "Home Team",
     "If you don't have the person's email, it is auto generated": "If you don't have the person's email, it is auto generated",
+    "Invite players": "Invite players",
+    "Is this room private": "Is this room private",
+    "Last game": "Last game",
+    "Last played Team": "Last played Team",
+    "Last scores": "Last scores",
+    "Last update": "Last update",
     "List of Administrators": "List of Administrators",
     "List of admins": "List of admins",
+    "Live update": "Live update",
+    "Locked": "Locked",
     "Log Out": "Log Out",
     "Log in": "Log in",
     "Log in or register": "Log in or register",
+    "Managed by": "Managed by",
+    "Message deleted": "Message deleted",
+    "Minus one game": "Minus one game",
     "Name": "Name",
     "Name of the Schedule": "Name of the Schedule",
     "New Password": "New Password",
+    "No games yet": "No games yet",
+    "No new posts or comments": "No new posts or comments",
+    "No other public rooms": "No other public rooms",
+    "No private rooms": "No private rooms",
     "No schedule available for": "No schedule available for",
+    "No seasons are available in the new database": "No seasons are available in the new database",
+    "No selected players in this team": "No selected players in this team",
+    "Nobody yet": "Nobody yet",
     "Not Found": "Not Found",
+    "Not in": "Not in",
+    "Not opened yet": "Not opened yet",
     "OUR BILLIARD RULES": "OUR BILLIARD RULES",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
+    "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Or add a new player",
     "Overview and Help": "Overview and Help",
     "Page Expired": "Page Expired",
+    "Participating Players": "Participating Players",
     "Participating Teams": "Participating Teams",
     "Password": "Password",
     "Payment Required": "Payment Required",
+    "Percentage": "Percentage",
     "Planned game for": "Planned game for",
+    "Playing date": "Playing date",
+    "Plays at": "Plays at",
+    "Please enter your password to confirm you would like to permanently delete your account.": "Please enter your password to confirm you would like to permanently delete your account.",
+    "Posted by": "Posted by",
     "Previous schedules": "Previous schedules",
+    "Private Chat": "Private Chat",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
     "Profile related": "Profile related",
     "Register": "Register",
     "Remember me": "Remember me",
+    "Remove this user from the chat? All related messages will be deleted too": "Remove this user from the chat? All related messages will be deleted too",
     "Resend Verification Email": "Resend Verification Email",
+    "Reserve": "Reserve",
     "Reset Password": "Reset Password",
+    "Reset the schedule": "Reset the schedule",
+    "Room created": "Room created",
+    "Room name": "Room name",
+    "Room updated": "Room updated",
     "Save": "Save",
     "Saved": "Saved",
     "Schedules of the day": "Schedules of the day",
+    "Score": "Score",
     "Score changes log file": "Score changes log file",
     "Score updated": "Score updated",
+    "Scoreboard": "Scoreboard",
     "Scoreboard explained": "Scoreboard explained",
     "Scores": "Scores",
     "Season": "Season",
     "Season Structure": "Season Structure",
     "Select a player from the users table": "Select a player from the users table",
+    "Select another Season": "Select another Season",
+    "Select venue": "Select venue",
+    "Send": "Send",
     "Send emails to players": "Send emails to players",
     "Server Error": "Server Error",
     "Service Unavailable": "Service Unavailable",
     "Showing": "Showing",
+    "Special date": "Special date",
+    "Started by": "Started by",
+    "Sticky": "Sticky",
+    "Team": "Team",
+    "Team details": "Team details",
+    "Teams": "Teams",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
     "The Calendar": "The Calendar",
     "The Individual Ranking": "The Individual Ranking",
@@ -96,49 +175,96 @@
     "The format is updated": "The format is updated",
     "The format used is": "The format used is",
     "The format used is the": "The format used is the",
+    "The help pages": "The help pages",
     "The individual ranking overview": "The individual ranking overview",
     "The log file of all score changes": "The log file of all score changes",
     "The maximum allowed players has been reached!": "The maximum allowed players has been reached!",
     "The players": "The players",
+    "The team": "The team",
+    "There are no games yet": "There are no games yet",
     "There are no players added to the team yet!": "There are no players added to the team yet!",
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
+    "Title": "Title",
     "Toggle to make a captain": "Toggle to make a captain",
     "Toggle to make a regular player": "Toggle to make a regular player",
     "Too Many Requests": "Too Many Requests",
+    "Total games lost": "Total games lost",
+    "Total games won": "Total games won",
     "Unauthorized": "Unauthorized",
     "Upcoming schedules": "Upcoming schedules",
     "Update": "Update",
     "Update Password": "Update Password",
     "Update Season structure": "Update Season structure",
+    "Update post": "Update post",
     "Update the Calendar": "Update the Calendar",
     "Update the Season structure": "Update the Season structure",
     "Update the current Calendar": "Update the current Calendar",
     "Update the scores of the": "Update the scores of the",
+    "Update your Chat Room": "Update your Chat Room",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
     "Updated": "Updated",
     "User created and added to your team! A reminder has been sent with the login info.": "User created and added to your team! A reminder has been sent with the login info.",
+    "Venue": "Venue",
     "Visit": "Visit",
+    "Visitor": "Visitor",
     "Visitors": "Visitors",
     "Website changelog": "Website changelog",
+    "What is your role in the current Season": "What is your role in the current Season",
+    "Write a new post": "Write a new post",
+    "You are the Captain, you can": "You are the Captain, you can",
     "You can leave this empty if you don't have the number": "You can leave this empty if you don't have the number",
     "You can't change the score after the confirmation": "You can't change the score after the confirmation",
+    "You don't play for a team. If you think this is an error": "You don't play for a team. If you think this is an error",
+    "You may leave this empty, except for bar owners and captains": "You may leave this empty, except for bar owners and captains",
+    "You play for": "You play for",
+    "Your Dashboard": "Your Dashboard",
+    "Your comment": "Your comment",
+    "Your current": "Your current",
+    "Your current position": "Your current position",
     "Your email address is unverified.": "Your email address is unverified.",
     "Your favorite format is selected": "Your favorite format is selected",
+    "Your message": "Your message",
+    "Your participation": "Your participation",
+    "Your team members are": "Your team members are",
     "auth.password": "auth.password",
-    "confirm": "confirm",
+    "back to post": "back to post",
+    "back to the forum": "back to the forum",
+    "can only be changed by administrators": "can only be changed by administrators",
+    "columns": "columns",
+    "contact your captain or bar owner": "contact your captain or bar owner",
+    "created by": "created by",
+    "day": "day",
+    "delete the date": "delete the date",
     "doubles": "doubles",
     "finished": "finished",
+    "games": "games",
+    "games participated": "games participated",
     "has a BYE": "has a BYE",
     "has no BYE": "has no BYE",
+    "hidden": "hidden",
     "if available": "if available",
+    "if this is an error or a holiday": "if this is an error or a holiday",
+    "individual rank is": "individual rank is",
+    "invited": "invited",
+    "last comment by": "last comment by",
+    "manage your team here": "manage your team here",
     "no daily scores yet": "no daily scores yet",
     "of": "of",
     "on the": "on the",
     "pagination.next": "pagination.next",
     "pagination.previous": "pagination.previous",
+    "players selected of a maximum of": "players selected of a maximum of",
+    "please create some": "please create some",
+    "posted by": "posted by",
+    "pushed to the top for important messages": "pushed to the top for important messages",
     "ready to start": "ready to start",
     "results": "results",
     "select": "select",
+    "select a Venue": "select a Venue",
+    "select date": "select date",
     "singles": "singles",
-    "to": "to"
+    "to": "to",
+    "update team and players": "update team and players",
+    "users": "users",
+    "week": "week"
 }
