some missed translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,8 +59,12 @@
     "Delete Account": "Delete Account",
     "Deleted": "Deleted",
     "Detailed schedules": "Detailed schedules",
+    "Details of": "Details of",
+    "Details of the venue": "Details of the venue",
     "Edit": "Edit",
+    "Edit the team": "Edit the team",
     "Edit the team players": "Edit the team players",
+    "Edit the venue": "Edit the venue",
     "Edit the venue's details": "Edit the venue's details",
     "Edit this venue": "Edit this venue",
     "Email": "Email",
@@ -214,6 +218,7 @@
     "You are the Captain, you can": "You are the Captain, you can",
     "You can leave this empty if you don't have the number": "You can leave this empty if you don't have the number",
     "You can't change the score after the confirmation": "You can't change the score after the confirmation",
+    "You don't have access to this page": "You don't have access to this page",
     "You don't play for a team. If you think this is an error": "You don't play for a team. If you think this is an error",
     "You may leave this empty, except for bar owners and captains": "You may leave this empty, except for bar owners and captains",
     "You play for": "You play for",
@@ -260,7 +265,6 @@
     "ready to start": "ready to start",
     "results": "results",
     "select": "select",
-    "select a Venue": "select a Venue",
     "select date": "select date",
     "singles": "singles",
     "to": "to",
