--- a/lang/nl.json
+++ b/lang/nl.json
@@ -59,8 +59,12 @@
     "Delete Account": "Account verwijderen",
     "Deleted": "Gewist",
     "Detailed schedules": "Gedetailleerde roosters",
+    "Details of": "Details van",
+    "Details of the venue": "Details van de bar",
     "Edit": "Wijzig",
+    "Edit the team": "Edit the team",
     "Edit the team players": "Edit the team players",
+    "Edit the venue": "Wijzig de bar",
     "Edit the venue's details": "Wijzig de details",
     "Edit this venue": "Wijzig deze info",
     "Email": "E-mail",
@@ -214,6 +218,7 @@
     "You are the Captain, you can": "Je bent de kapitain, u kan",
     "You can leave this empty if you don't have the number": "Je kunt dit leeg laten als je het nummer niet hebt",
     "You can't change the score after the confirmation": "Je kunt de score niet wijzigen na bevestiging",
+    "You don't have access to this page": "U heeft geen toestemming tot deze pagina",
     "You don't play for a team. If you think this is an error": "Je speelt voor geen team. Als dit een fout is",
     "You may leave this empty, except for bar owners and captains": "Ja mag dit leeglaten. Uitgezonderd voor kapiteinen en bareigenaren",
     "You play for": "Je speelt voor",
