added some nl translations

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -51,6 +51,9 @@
     "Daily games won": "Spellen verloren",
     "Dashboard": "Dashboard",
     "Date": "Datum",
+    "Date overlaps": "Datum overlapt",
+    "Dates not played yet": "Nog niet gespeelde datums",
+    "Dates played and should be immutable": "Reeds gespeelde datums die liefst onveranderd blijven",
     "Day Schedule blueprint": "Dagrooster sjabloon",
     "Day Schedules": "Dagroosters",
     "Day Scores and Game details": "Dagresultaten en wedstrijdgegevens",
@@ -104,6 +107,7 @@
     "Name": "Naam",
     "Name of the Schedule": "Naam van het rooster",
     "New Password": "Nieuw wachtwoord",
+    "No dates can be changed": "Datums kunnen niet veranderd worden",
     "No games yet": "Nog geen spelen",
     "No new posts or comments": "Geen nieuwe posts of commentaren",
     "No other public rooms": "Geen andere publieke ruimtes",
@@ -187,6 +191,7 @@
     "The team": "Het Team",
     "There are no games yet": "Er zijn nog geen spelen",
     "There are no players added to the team yet!": "Er zijn nog geen spelers aan het team toegevoegd!",
+    "This Season seems finished, missing (semi) finals": "Dit Seizoen lijkt over, zijn er missende (semi) finales",
     "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord om verder te gaan.",
     "Title": "Titel",
     "Toggle to make a captain": "Schakel om tot kapitein te maken",
@@ -247,7 +252,7 @@
     "has a BYE": "heeft een BYE",
     "has no BYE": "heeft geen BYE",
     "hidden": "verborgen",
-    "if available": "indien beschikbaar",
+    "if available": "if available",
     "if this is an error or a holiday": "indien een fout of feestdag",
     "individual rank is": "individuele ranng is",
     "invited": "uitgenodigd",
