some new translations added

--- a/lang/en.json
+++ b/lang/en.json
@@ -51,6 +51,9 @@
     "Daily games won": "Daily games won",
     "Dashboard": "Dashboard",
     "Date": "Date",
+    "Date overlaps": "Date overlaps",
+    "Dates not played yet": "Dates not played yet",
+    "Dates played and should be immutable": "Dates played and should be immutable",
     "Day Schedule blueprint": "Day Schedule blueprint",
     "Day Schedules": "Day Schedules",
     "Day Scores and Game details": "Day Scores and Game details",
@@ -104,6 +107,7 @@
     "Name": "Name",
     "Name of the Schedule": "Name of the Schedule",
     "New Password": "New Password",
+    "No dates can be changed": "No dates can be changed",
     "No games yet": "No games yet",
     "No new posts or comments": "No new posts or comments",
     "No other public rooms": "No other public rooms",
@@ -115,6 +119,7 @@
     "Not Found": "Not Found",
     "Not in": "Not in",
     "Not opened yet": "Not opened yet",
+    "Number of games participated": "Number of games participated",
     "OUR BILLIARD RULES": "OUR BILLIARD RULES",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Or add a new player",
@@ -187,6 +192,7 @@
     "The team": "The team",
     "There are no games yet": "There are no games yet",
     "There are no players added to the team yet!": "There are no players added to the team yet!",
+    "This Season seems finished, missing (semi) finals": "This Season seems finished, missing (semi) finals",
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
     "Title": "Title",
     "Toggle to make a captain": "Toggle to make a captain",
