--- a/lang/nl.json
+++ b/lang/nl.json
@@ -49,7 +49,7 @@
     "Current Team": "Huidig Team",
     "Daily games lost": "Spellen gewonnen",
     "Daily games won": "Spellen verloren",
-    "Dashboard": "Dashboard",
+    "Dashboard": "Dashbord",
     "Date": "Datum",
     "Date overlaps": "Datum overlapt",
     "Dates not played yet": "Nog niet gespeelde datums",
@@ -119,6 +119,7 @@
     "Not Found": "Niet gevonden",
     "Not in": "Not in",
     "Not opened yet": "Nog niet geopend",
+    "Number of games participated": "Aantal wedstrijden gespeeld",
     "OUR BILLIARD RULES": "ONZE BILJARTREGELS",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Of voeg een nieuwe speler toe",
@@ -197,8 +198,8 @@
     "Toggle to make a captain": "Schakel om tot kapitein te maken",
     "Toggle to make a regular player": "Schakel om tot gewone speler te maken",
     "Too Many Requests": "Te veel verzoeken",
-    "Total games lost": "Total games lost",
-    "Total games won": "Total games won",
+    "Total games lost": "Wedstrijdend verloren",
+    "Total games won": "Wedstrijden gewonnen",
     "Unauthorized": "Ongeautoriseerd",
     "Upcoming schedules": "Aankomende roosters",
     "Update": "Bijwerken",
