some missing translations in the individual ranking overview

--- a/lang/en.json
+++ b/lang/en.json
@@ -47,6 +47,7 @@
     "Create the new Room": "Create the new Room",
     "Current Password": "Current Password",
     "Current Team": "Current Team",
+    "Current team": "Current team",
     "Daily games lost": "Daily games lost",
     "Daily games won": "Daily games won",
     "Dashboard": "Dashboard",
@@ -106,6 +107,7 @@
     "Minus one game": "Minus one game",
     "Name": "Name",
     "Name of the Schedule": "Name of the Schedule",
+    "New": "New",
     "New Password": "New Password",
     "No dates can be changed": "No dates can be changed",
     "No games yet": "No games yet",
@@ -119,7 +121,8 @@
     "Not Found": "Not Found",
     "Not in": "Not in",
     "Not opened yet": "Not opened yet",
-    "Number of games participated": "Number of games participated",
+    "Number of games participated": "Number of participated games",
+    "Number of participated playing dates": "Number of participated playing dates",
     "OUR BILLIARD RULES": "OUR BILLIARD RULES",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Or add a new player",
@@ -241,6 +244,7 @@
     "back to post": "back to post",
     "back to the forum": "back to the forum",
     "can only be changed by administrators": "can only be changed by administrators",
+    "click on a name to see the game details": "click on a name to see the game details",
     "columns": "columns",
     "contact your captain or bar owner": "contact your captain or bar owner",
     "created by": "created by",
