--- a/lang/nl.json
+++ b/lang/nl.json
@@ -47,6 +47,7 @@
     "Create the new Room": "Maak de nieuwe chat ruimte",
     "Current Password": "Huidig wachtwoord",
     "Current Team": "Huidig Team",
+    "Current team": "Current team",
     "Daily games lost": "Spellen gewonnen",
     "Daily games won": "Spellen verloren",
     "Dashboard": "Dashbord",
@@ -106,6 +107,7 @@
     "Minus one game": "Min één game",
     "Name": "Naam",
     "Name of the Schedule": "Naam van het rooster",
+    "New": "New",
     "New Password": "Nieuw wachtwoord",
     "No dates can be changed": "Datums kunnen niet veranderd worden",
     "No games yet": "Nog geen spelen",
@@ -120,6 +122,7 @@
     "Not in": "Not in",
     "Not opened yet": "Nog niet geopend",
     "Number of games participated": "Aantal wedstrijden gespeeld",
+    "Number of participated playing dates": "Aantal deelgenomen speeldagen",
     "OUR BILLIARD RULES": "ONZE BILJARTREGELS",
     "Once your account is deleted, all of its resources and data will be permanently deleted.": "Once your account is deleted, all of its resources and data will be permanently deleted.",
     "Or add a new player": "Of voeg een nieuwe speler toe",
@@ -241,6 +244,7 @@
     "back to post": "terug naar de post",
     "back to the forum": "terug naar het forum",
     "can only be changed by administrators": "kan alleen door een administrator aangepast worden",
+    "click on a name to see the game details": "klik op de naam om de speeldetails te zien",
     "columns": "kolommen",
     "contact your captain or bar owner": "contacteer jouw kapitein of bareigenaar",
     "created by": "gemaakt door",
@@ -255,7 +259,7 @@
     "hidden": "verborgen",
     "if available": "if available",
     "if this is an error or a holiday": "indien een fout of feestdag",
-    "individual rank is": "individuele ranng is",
+    "individual rank is": "individuele rang is",
     "invited": "uitgenodigd",
     "last comment by": "laatste commentaar door",
     "manage your team here": "beheer uw team hier",
