--- a/lang/en.json
+++ b/lang/en.json
@@ -84,11 +84,13 @@
     "Forum posts that changed since your last login": "Forum posts that changed since your last login",
     "Game": "Game",
     "General overview": "General overview",
+    "Google Play App": "Google Play App",
     "Has been opened": "Has been opened",
     "Hide comment": "Hide comment",
     "Home": "Home",
     "Home Team": "Home Team",
     "If you don't have the person's email, it is auto generated": "If you don't have the person's email, it is auto generated",
+    "Individual Games and Results": "Individual Games and Results",
     "Invite players": "Invite players",
     "Is this room private": "Is this room private",
     "Last game": "Last game",
@@ -171,6 +173,9 @@
     "Send emails to players": "Send emails to players",
     "Server Error": "Server Error",
     "Service Unavailable": "Service Unavailable",
+    "Show only the ###median### most active players": "Show only the ###median### most active players",
+    "Show the list of ALL players": "Show the list of ALL players",
+    "Show/Hide password": "Show/Hide password",
     "Showing": "Showing",
     "Special date": "Special date",
     "Started by": "Started by",
@@ -268,6 +273,7 @@
     "on the": "on the",
     "pagination.next": "pagination.next",
     "pagination.previous": "pagination.previous",
+    "played for": "played for",
     "players selected of a maximum of": "players selected of a maximum of",
     "please create some": "please create some",
     "posted by": "posted by",
