--- a/lang/nl.json
+++ b/lang/nl.json
@@ -84,11 +84,13 @@
     "Forum posts that changed since your last login": "Forum posts gewijzigd sinds uw laatste login",
     "Game": "Spel",
     "General overview": "Algemeen overzicht",
+    "Google Play App": "Google Play App",
     "Has been opened": "Is geopend",
     "Hide comment": "Verberg commentaar",
     "Home": "Startpagina",
     "Home Team": "Thuisploeg",
     "If you don't have the person's email, it is auto generated": "Als je het e-mailadres van de persoon niet hebt, wordt het automatisch gegenereerd",
+    "Individual Games and Results": "Individuele spelen en resultated",
     "Invite players": "Nodig spelers uit",
     "Is this room private": "Is deze ruimte privaat",
     "Last game": "Laatste spel",
@@ -171,6 +173,9 @@
     "Send emails to players": "Stuur e-mails naar spelers",
     "Server Error": "Serverfout",
     "Service Unavailable": "Dienst niet beschikbaar",
+    "Show only the ###median### most active players": "Toon enkel de ###median### meest actieve spelers",
+    "Show the list of ALL players": "Toon een overzicht van ALLE spelers",
+    "Show/Hide password": "Toon/verberg paswoord",
     "Showing": "Weergeven",
     "Special date": "speciale dag",
     "Started by": "Gestart door",
@@ -268,6 +273,7 @@
     "on the": "op de",
     "pagination.next": "volgende",
     "pagination.previous": "vorige",
+    "played for": "speelde voor",
     "players selected of a maximum of": "geselcteerde spelers op een maximum van",
     "please create some": "creëer enkele spelen",
     "posted by": "gepubliceerd door",
